--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,14 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+    <string name="event_name">event name</string>
+    <string name="what_s_your_name">what\'s your name</string>
+    <string name="end_time">end time</string>
+    <string name="start_time">start time</string>
+    <string name="describe_your_event">describe your event</string>
+    <string name="add_event">add event</string>
+    <string name="event_place">Event place</string>
+    <string name="want_to_go">Want to go</string>
     <string-array name="sexlist">
         <item>male</item>
         <item>female</item>
