--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="your_gender">your gender</string>
     <string name="birthday">birthday</string>
     <string name="sign_up">sign up</string>
+    <string name="auth_settings_key">user</string>
     <string-array name="sexlist">
         <item>male</item>
         <item>female</item>
