--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
         <item>male</item>
         <item>female</item>
     </string-array>
+    <string name="title_activity_my_events">MyEventsActivity</string>
 </resources>
