--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">EventHub</string>
+    <string name="title_new_event">Новое событие</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Android Studio</string>
@@ -29,4 +30,5 @@
         <item>Девушка</item>
     </string-array>
     <string name="title_activity_my_events">Мои события</string>
+    <string name="title_assigned_events">Иду</string>
 </resources>
