changed textTypes "" -> textPassword (Enter password| Repeat password) in sign up Activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     </string-array>
     <string name="title_activity_my_events">Мои события</string>
     <string name="title_assigned_events">Иду</string>
+    <string name="signup_birthday">birthday</string>
 </resources>
